--- a/FrontEnd/src/assets/sass/components/_TV.scss
+++ b/FrontEnd/src/assets/sass/components/_TV.scss
@@ -6,6 +6,7 @@ $tv-bottom-items-color: #d5b09a;
   background-color: $darker-background-color;
   padding: 12px;
   border-radius: 22px;
+  width: $bookmarks-list-width;
 }
 
 .tv-buttons-div {
