--- a/FrontEnd/src/assets/sass/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/sass/utils/_global-vars.scss
@@ -81,6 +81,7 @@ $default-border-width: 3px;
 /**
  * WEBSITE DESIGN VARIABLES.
  */
+$entire-site-margin-x: 5vw;
 $navbar-height: 12.5vh;
 $bookmarks-list-width: 220px;
 $filter-top-margin: 5vh;
