--- a/FrontEnd/src/assets/sass/components/_TV.scss
+++ b/FrontEnd/src/assets/sass/components/_TV.scss
@@ -1,4 +1,4 @@
-$tv-bottom-items-color: #d5b09a;
+$tv-bottom-items-color: $primary-5-color;
 
 .tv-container {
   display: inline-block;
@@ -20,46 +20,57 @@ $tv-bottom-items-color: #d5b09a;
   span,
   button,
   .btn {
-    @extend .mx-auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .btn:first-child {
-    @extend .pt-2;
+    padding-top: 2vh;
   }
 
   .btn:last-child {
-    @extend .pb-2;
+    padding-bottom: 2vh;
   }
 
   .btn {
-    @extend .py-1;
+    @include py(1);
   }
 }
 
-.tv-bottom-item {
-  background-color: $tv-bottom-items-color;
-  border: 0;
-  height: 20px;
-}
+.tv-bottom {
+  display: flex;
+  justify-content: space-around;
+  padding-left: 3vh;
+  padding-right: 3vh;
+  padding-top: 12px;
+  padding-bottom: 2x;
 
-.tv-bottom-bar {
-  @extend .tv-bottom-item;
-  min-width: 70%;
-  border-radius: 20px;
-}
+  &-item {
+    background-color: $tv-bottom-items-color;
+    border: 0;
+    height: 20px;
+  }
 
-.tv-bottom-circle {
-  @extend .tv-bottom-item;
-  width: 20px;
-  border-radius: 50%;
+  &-bar {
+    @extend .tv-bottom-item;
+    min-width: 70%;
+    border-radius: 20px;
+  }
+
+  &-circle {
+    @extend .tv-bottom-item;
+    width: 20px;
+    border-radius: 50%;
+  }
 }
 
 .tv-title {
-  @extend .secondary-title;
+  @include font-type('special');
+  margin-top: 2vh;
 }
 
 .tv-separator {
-  @extend .pb-2;
+  padding-bottom: 1vh;
   width: 90%;
   border: 0;
   border-top: 3px solid $tv-bottom-items-color;
