--- a/FrontEnd/src/assets/sass/components/_Home.scss
+++ b/FrontEnd/src/assets/sass/components/_Home.scss
@@ -1,23 +1,3 @@
-$sidebar-width: 250px;
-$sidebar-offset: calc(100vw - $sidebar-width);
-$filter-height: 5vh;
-
-.home {
-  &-main {
-    margin-right: calc(#{$sidebar-width} + #{$entire-site-margin-x});
-    margin-left: $entire-site-margin-x;
-    margin-top: $filter-top-margin;
-  }
-
-  &-sidebar {
-    position: fixed;
-    width: $sidebar-width;
-    top: $navbar-height;
-    right: $entire-site-margin-x;
-    height: calc(100vh - #{$navbar-height});
-  }
-
-  &-filter {
-    padding-bottom: 5vh;
-  }
+.home-filter {
+  padding-bottom: 5vh;
 }
