--- a/FrontEnd/src/assets/sass/components/_all.scss
+++ b/FrontEnd/src/assets/sass/components/_all.scss
@@ -25,4 +25,5 @@
 @import 'FilterForm';
 @import 'Login';
 @import 'Landing';
-@import 'HouseSideBar'
+@import 'HouseSideBar';
+@import 'SideBarLayout';
