--- a/FrontEnd/src/assets/sass/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/sass/utils/_global-vars.scss
@@ -82,6 +82,7 @@ $default-border-width: 3px;
  * WEBSITE DESIGN VARIABLES.
  */
 $entire-site-margin-x: 8vw;
-$navbar-height: 12.5vh;
+$navbar-height: 70px;
 $bookmarks-list-width: 220px;
+$filter-height: 5vh;
 $filter-top-margin: 5vh;
