--- a/FrontEnd/src/assets/sass/_theme.scss
+++ b/FrontEnd/src/assets/sass/_theme.scss
@@ -16,43 +16,6 @@ body {
   @extend .d-md-flex;
 }
 
-.single-line-input {
-  @include font-type('primary-input-text');
-  // TODO
-  border: 2px solid $primary-3-color;
-  border-radius: 8px;
-  // box-shadow: none;
-  // outline: none;
-  // border: 2 solid theme-color('primary');
-  // border-bottom: 3px solid theme-color('primary');
-  // border-radius: 0;
-  box-shadow: none;
-  outline: none;
-  height: 50px;
-  font-size: 20px;
-  padding-left: 18px;
-
-  &:active,
-  &.was-validated,
-  &.form-control:valid,
-  &.form-control.is-valid {
-    color: theme-color('primary');
-    // border-bottom: 3px solid theme-color('primary');
-    border-radius: 8px;
-    box-shadow: none;
-  }
-  &:focus {
-    border: 2px solid $primary-light-color;
-  }
-  &.form-control:disabled {
-    background-color: $primary-2-color;
-    border: 2px solid $primary-light-color;
-  }
-  &.form-control[readonly] {
-    background-color: transparent;
-  }
-}
-
 /**
  * STYLE GUIDE BUTTONS
  */
@@ -96,7 +59,7 @@ body {
 .btn-secondary {
   @extend .btn-primary;
   font-size: $md-font-size;
-  height: 50px;
+  // height: 50px;
 }
 
 .btn-tertiary {
