setup preview buttons in houseprofile (including css) and almost done fixing up housing post form

--- a/FrontEnd/src/assets/sass/components/_HouseProfile.scss
+++ b/FrontEnd/src/assets/sass/components/_HouseProfile.scss
@@ -68,13 +68,34 @@
     @include thin-border('lg');
     padding: 0;
   }
+}
 
-  & .house-profile-above-modal {
+.house-profile-preview {
+  $house-profile-preview-wrapper-height: 70px;
+  & .modal-dialog {
+    margin-top: $house-profile-preview-wrapper-height
+  }
+
+  & .house-profile-preview-buttons {
     width: 100%;
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 0 - $house-profile-preview-wrapper-height;
+
+    &-wrapper {
+      @include thin-border('md');
+      height: $house-profile-preview-wrapper-height;
+      background-color: white;
+      border-top-left-radius: $sm-border-radius;
+      border-top-right-radius: $sm-border-radius;
+    
+      & .btn {
+        @include m(2);
+        font-size: $sm-font-size;
+      }
+    }
   }
 }
 
