--- a/FrontEnd/src/assets/sass/components/_Login.scss
+++ b/FrontEnd/src/assets/sass/components/_Login.scss
@@ -30,3 +30,10 @@
 .login-why-text {
   color:$primary-dark-color;
 }
+
+.login-modal-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  padding-bottom: 0px;
+}
