--- a/FrontEnd/src/assets/sass/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/sass/utils/_global-vars.scss
@@ -70,7 +70,7 @@ $unfocused-color: #d3ab98; // i.e. 'min', 'to school'
 $primary-color: $responsive-to-user-color;
 $primary-color-light: #fdf4f0;
 $secondary-color: #4d5e3b;
-$secondary-light-color: #e6f0d8;
+// $secondary-light-color: #e6f0d8;
 $main-background-color: #fffcfb;
 $darker-background-color: #f8e6d8;
 
