--- a/FrontEnd/src/assets/sass/utils/_mixins.scss
+++ b/FrontEnd/src/assets/sass/utils/_mixins.scss
@@ -1,3 +1,5 @@
+// @import '~bootstrap/scss/mixins';
+
 @mixin mobile-and-smaller {
   @include media-breakpoint-down('sm') {
     @content;
@@ -126,6 +128,19 @@
 /**
  * Bootstrap padding and margin mixins below (so you don't have the !important).
  */
+// TODO this is copied from bootstrap, don't do this tho...
+$spacer: 1rem;
+$spacers: (
+  (
+    0: 0,
+    1: ($spacer * .25),
+    2: ($spacer * .5),
+    3: $spacer,
+    4: ($spacer * 1.5),
+    5: ($spacer * 3)
+  )
+);
+
 @function map-get-or-key($map, $key) {
 	@if map-has-key($map, $key) or map-has-key($map, -$key) {
 		@if $key != 'auto' and type-of($key) == 'number' and $key < 0 {
