--- a/FrontEnd/src/assets/sass/utils/_mixins.scss
+++ b/FrontEnd/src/assets/sass/utils/_mixins.scss
@@ -1,19 +1,20 @@
-// @import '~bootstrap/scss/mixins';
+@import 'bootstrap-breakpoints';
 
-@mixin mobile-and-smaller {
-  @include media-breakpoint-down('sm') {
+// Breakpoint wrappers for bootstrap's media breakpoints
+@mixin bp($size) {
+  @include media-breakpoint-only($size) {
     @content;
   }
 }
 
-@mixin md-and-smaller {
-  @include media-breakpoint-down('md') {
+@mixin bp-up($size) {
+  @include media-breakpoint-up($size) {
     @content;
   }
 }
 
-@mixin lg-and-larger {
-  @include media-breakpoint-up('lg') {
+@mixin bp-down($size) {
+  @include media-breakpoint-down($size) {
     @content;
   }
 }
@@ -123,98 +124,4 @@
     @error "#{$size} is not one of the available border sizes. \
             Check _mixins.scss to see which sizes you can use.";
   }
-}
-
-/**
- * Bootstrap padding and margin mixins below (so you don't have the !important).
- */
-// TODO this is copied from bootstrap, don't do this tho...
-$spacer: 1rem;
-$spacers: (
-  (
-    0: 0,
-    1: ($spacer * .25),
-    2: ($spacer * .5),
-    3: $spacer,
-    4: ($spacer * 1.5),
-    5: ($spacer * 3)
-  )
-);
-
-@function map-get-or-key($map, $key) {
-	@if map-has-key($map, $key) or map-has-key($map, -$key) {
-		@if $key != 'auto' and type-of($key) == 'number' and $key < 0 {
-			@return 0 - map-get($map, -$key);
-		} @else {
-			@return map-get($map, $key);
-		}
-	} @else if type-of($key) == 'string' {
-		@return unquote($key);
-	} @else {
-		@return $key;
-	}
-}
-
-@function bsize($key) {
-	@return map-get-or-key($spacers, $key);
-}
-
-@mixin m($space) {
-	margin: bsize($space);
-}
-
-@mixin mt($space) {
-	margin-top: bsize($space);
-}
-
-@mixin mb($space) {
-	margin-bottom: bsize($space);
-}
-
-@mixin ml($space) {
-	margin-left: bsize($space);
-}
-
-@mixin mr($space) {
-	margin-right: bsize($space);
-}
-
-@mixin p($space) {
-	padding: bsize($space);
-}
-
-@mixin pt($space) {
-	padding-top: bsize($space);
-}
-
-@mixin pb($space) {
-	padding-bottom: bsize($space);
-}
-
-@mixin pl($space) {
-	padding-left: bsize($space);
-}
-
-@mixin pr($space) {
-	padding-right: bsize($space);
-}
-
-@mixin mx($space) {
-	@include ml($space);
-	@include mr($space);
-}
-
-@mixin my($space) {
-	@include mt($space);
-	@include mb($space);
-}
-
-@mixin px($space) {
-	@include pl($space);
-	@include pr($space);
-}
-
-@mixin py($space) {
-	@include pt($space);
-	@include pb($space);
 }
