--- a/FrontEnd/src/components/BookmarkList/BookmarkList.module.scss
+++ b/FrontEnd/src/components/BookmarkList/BookmarkList.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/utils/all';
+@import '../../assets/sass/utils/index';
 
 .bookmarkList {
   @include thin-border('sm', $primary-3-color);
