--- a/FrontEnd/src/components/Filter/FilterForm/FilterForm.module.scss
+++ b/FrontEnd/src/components/Filter/FilterForm/FilterForm.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/utils/index';
+@import '../../../assets/sass/utils/index';
 
 .title {
   @include font-type('secondary-title');
