upgraded bootstrap to newer version (thought it would fix a bug), updated and fixed slideshow component (and the stretched images in it)

--- a/FrontEnd/src/components/Filter/Filter.module.scss
+++ b/FrontEnd/src/components/Filter/Filter.module.scss
@@ -7,4 +7,5 @@
   border: $darker-background-color solid 3px;
   box-shadow: 2px 4px 8px rgba(164, 97, 62, 0.3);
   border-radius: 22px;
+  margin-bottom: 5vh;
 }
