--- a/FrontEnd/src/components/HouseCard/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCard/HouseCard.module.scss
@@ -1,12 +1,17 @@
-.house-card {
+@import '../../assets/sass/utils/index';
+
+.card {
   @include thin-border('md');
   background-color: theme-color('secondary-light');
   border-radius: 25px; // TODO make variable
   overflow: hidden;
 }
 
-.house-pic {
+.pic {
   height: 200px;
+  overflow: hidden;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .divider {
