separated filled image component into its own basic component, fixed border mixin

--- a/FrontEnd/src/assets/sass/global/_bootstrap.scss
+++ b/FrontEnd/src/assets/sass/global/_bootstrap.scss
@@ -9,7 +9,7 @@ $theme-colors: (
   'primary': $primary-light-color,
   'primary-light': $primary-light-color,
   'secondary': $primary-light-color,
-  'secondary-light': $secondary-light-color,
+  'secondary-light': $secondary-1-color,
   'secondary-dark': $secondary-dark-color,
   'no-show': white,
 );
