--- a/FrontEnd/src/components/HouseProfile/ThirdColumn/ThirdColumn.module.scss
+++ b/FrontEnd/src/components/HouseProfile/ThirdColumn/ThirdColumn.module.scss
@@ -43,7 +43,7 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-top: 0.5rem;
-  background-color: $secondary-light-color;
+  background-color: $secondary-1-color;
   display: flex;
   flex-direction: column;
   flex: 100%;
