--- a/FrontEnd/src/components/basics/SlideShow/SlideShow.module.scss
+++ b/FrontEnd/src/components/basics/SlideShow/SlideShow.module.scss
@@ -21,11 +21,6 @@
 }
 
 .item {
-  min-height: 100%;
-  min-width: 100%;
-
-  & ~ .active {
-    display: table;
-    height: inherit;
-  }
+  width: 100%;
+  height: 100%;
 }
