--- a/FrontEnd/src/components/HouseProfile/SecondColumn/SecondColumn.module.scss
+++ b/FrontEnd/src/components/HouseProfile/SecondColumn/SecondColumn.module.scss
@@ -1,13 +1,5 @@
 @import '../../../assets/sass/utils/index';
 
-.ellipse {
-  justify-content: center;
-}
-
-.ellpiseDot {
-  margin: 1rem;
-} 
-
 .icon {
   margin-top: 0.5rem;
 
@@ -25,7 +17,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   margin-left: 1rem;
   margin-right: 1rem;
   height: 100%;
@@ -45,7 +37,7 @@
   @include font-type('title');
 
   padding: 0.5rem 1rem;
-  background-color: theme-color('secondary-light');
+  background-color: $secondary-1-color;
   border-radius: 0.25rem;
 }
 
