--- a/FrontEnd/src/components/PlacesAutoComplete/PlacesAutoComplete.module.scss
+++ b/FrontEnd/src/components/PlacesAutoComplete/PlacesAutoComplete.module.scss
@@ -1,10 +1,9 @@
-.suggestion-item {
+.suggestion {
   background-color: $primary-1-color;
   color: $primary-dark-color;
   cursor: pointer;
 
   &:active,
-  // &--active,
   &:hover,
   &:focus {
     background-color: $primary-2-color;
