--- a/FrontEnd/src/components/ProfileModal/ProfileModal.module.scss
+++ b/FrontEnd/src/components/ProfileModal/ProfileModal.module.scss
@@ -1,43 +1,47 @@
+@import '../../assets/sass/utils/index';
+
 // TODO: abstract common code from this and WizardForm to theme.scss
 $profile-form-middle-height: 90%;
-.profile-form-top-bar {
+
+.topBar {
   @extend .px-3;
   @extend .py-2;
 
-  //background-color: $primary-2-color;
   width: 100%;
   height: (100% - $wizard-form-middle-height) / 2;
   display: flex;
   border-radius: $lg-border-radius $lg-border-radius 0 0;
   justify-content: center;
   margin-top: 2vh;
-
-  .title {
-    @include font-type('secondary-title');
-    font-weight: $regular-font-weight; // TODO make a font type for this
-    color: $secondary-dark-color;
-    .element {
-      width: 100%;
-      text-align: center;
-      position: relative;
-      top: -30px;
-      color: $secondary-1-color;
-      font-size: x-large;
-    }
-  }
-  .title-divider {
-    color: $secondary-1-color;
-    font-size: x-large;
-  }
 }
 
-.profile-cross {
+.title {
+  @include font-type('secondary-title');
+  font-weight: $regular-font-weight;
+  color: $secondary-dark-color;
+}
+
+.divider {
+  color: $secondary-1-color;
+  font-size: x-large;
+}
+
+.element {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  top: -30px;
+  color: $secondary-1-color;
+  font-size: x-large;
+}
+
+.profileCross {
   position: absolute;
   top: 26px;
   left: 42px;
 }
 
-.profile-selected {
+.profileSelected {
   font-weight: bold !important;
 }
 
@@ -45,7 +49,7 @@ $profile-form-middle-height: 90%;
   text-align: center;
 }
 
-.profile-form-middle {
+.middleSection {
   @extend .my-4;
   @extend .px-4;
 
@@ -56,13 +60,7 @@ $profile-form-middle-height: 90%;
   }
 }
 
-.profile-info {
-  //height: 100%;
-  align-items: center;
-  justify-content: center;
-}
-
-.profile-name {
+.name {
   text-align: center !important;
   display: block;
   width: 100%;
@@ -77,58 +75,15 @@ $profile-form-middle-height: 90%;
   color: #a6623f;
 }
 
-.profile-verified {
+.verified {
   margin-top: 15px;
   text-align: center !important;
   color: $secondary-2-color;
   font-size: $sm-font-size;
   font-weight: bold;
 }
-.profile-word-sub {
-  height: 24px;
-  font-family: Montserrat;
-  font-size: 20px;
-  font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  text-align: left;
-  color: #d3ab98;
-}
 
-.profile-text-price-related {
-  @extend .subtitle-text;
-  color: $primary-dark-color;
-}
-
-.profile-word-sub-selected {
-  color: white;
-}
-
-.profile-word-sub-bg {
-  padding: 5px 10px 0px 10px;
-  margin-right: 8px;
-  border-radius: 10px;
-  text-align: center;
-}
-
-.profile-button {
-  overflow: auto;
-}
-
-.profile-word-sub-bg-selected {
-  background-color: $primary-input-color;
-}
-
-.profile-year-row {
-  justify-content: space-between;
-  .form-group {
-    margin-bottom: 0 !important;
-  }
-}
-
-.profile-form-label {
+.label {
   width: 100%; // was 160px, TODO: use non-constant widths
   height: 23px;
   font-family: Montserrat;
@@ -142,48 +97,49 @@ $profile-form-middle-height: 90%;
   color: $primary-input-color;
 }
 
-.profile-form-bio {
+.bio {
   color: $primary-input-color;
 }
 
-.profile-sign-out {
+.signOut {
   color: $secondary-dark-color;
   text-decoration: underline;
 }
 
-.profile-cancel {
+.cancel {
   color: $primary-input-color;
   text-decoration: underline;
 }
 
-.profile-char-check {
+.charCheck {
   position: absolute;
   right: 15px;
   bottom: 0;
   color: $primary-dark-color;
 }
 
-.profile-bio-text {
+.bioText {
   resize: none;
   height: 150px !important;
 }
-.profile-school-year {
+
+.schoolYear {
   .form-group {
     width: 100%;
   }
 }
 
-.profile-wrap {
+.profileWrap {
   margin-top: 20px;
   display: flex;
   justify-content: center;
 }
 
-.profile-edit-wrap {
+.editWrap {
   height: 85px;
 }
 
-.profile-icon {
+.icon {
   border-style: solid;
   border-width: thin;
   border-color: $primary-light-color;
@@ -191,18 +147,7 @@ $profile-form-middle-height: 90%;
   height: 100px;
 }
 
-.profile-drop {
-  background-color: $primary-light-color;
-}
-
-.profile-drop-content {
-  overflow: auto;
-  background-color: $primary-1-color;
-  transform: translate3d(0, 48px, 0px) !important;
-  max-height: 35vh;
-}
-
-.profile-posts-list {
+.postsList {
   background-color: $primary-1-color;
   border-radius: 20px;
   padding: 20px;
@@ -211,7 +156,7 @@ $profile-form-middle-height: 90%;
   align-items: flex-start;
 }
 
-.profile-no-posts-text {
+.noPostsText {
   text-align: left;
   display: block;
   width: 100%;
@@ -225,7 +170,7 @@ $profile-form-middle-height: 90%;
   color: $secondary-dark-color;
 }
 
-.profile-mypost {
+.myPost {
   background-color: white;
   border-radius: 15px;
   padding: 10px;
@@ -234,20 +179,20 @@ $profile-form-middle-height: 90%;
   flex-direction: row;
 }
 
-.profile-mypost-picture {
+.myPostPicture {
   width: 100px;
   height: 100px;
   border-radius: 13px;
 }
 
-.profile-mypost-info {
+.myPostInfo {
   display: flex;
   flex-direction: column;
   margin-left: 10px;
   width: 100%;
 }
 
-.profile-mypost-title {
+.myPostTitle {
   font-size: $xs-font-size;
   color: $secondary-dark-color;
   font-weight: bold;
@@ -260,7 +205,7 @@ $profile-form-middle-height: 90%;
   font-family: Montserrat;
 }
 
-.profile-mypost-details {
+.myPostDetails {
   font-size: $xs-font-size;
   color: black;
   font-weight: normal;
@@ -273,7 +218,7 @@ $profile-form-middle-height: 90%;
   font-family: Montserrat;
 }
 
-.profile-mypost-actions {
+.myPostActions {
   justify-content: space-between;
   align-items: center;
   display: flex;
@@ -281,7 +226,7 @@ $profile-form-middle-height: 90%;
   width: 100%;
 }
 
-.profile-mypost-edit {
+.myPostEdit {
   font-size: $md-font-size;
   color: $secondary-dark-color;
   font-weight: normal;
@@ -295,7 +240,7 @@ $profile-form-middle-height: 90%;
   font-family: Montserrat;
 }
 
-.profile-form-modal-dialog {
+.modal {
   @include bp-up('md') {
     max-width: 90%;
   }
