--- a/FrontEnd/src/components/basics/Input/Input.module.scss
+++ b/FrontEnd/src/components/basics/Input/Input.module.scss
@@ -1,6 +1,6 @@
-// TODO clean this up by combining a lot of things
+@import '../../../assets/sass/utils/index';
 
-.input-unfilled {
+.unfilled {
   @include font-type('primary-input-text');
   border: 2px solid $primary-3-color;
   border-radius: $input-border-radius;
@@ -20,16 +20,16 @@
   }
 }
 
-.is-valid {
+.valid {
   border-color: $primary-light-color;
 }
 
-.input-invalid {
+.invalid {
   border: 3px solid $error-color !important;
   color: $error-color !important;
 }
 
-.input-filled {
+.filled {
   @extend .input-unfilled;
   border-color: $primary-light-color;
 
@@ -41,26 +41,21 @@
   }
 }
 
-.input-readonly {
-  @extend .input-filled;
+.readonly {
   background-color: $primary-2-color !important;
 }
 
-.input-label {
+.label {
   @include font-type('label-text');
 }
 
-.input-inline-text {
+.inlineText {
   @include font-type('label-text');
 
   margin-left: 15px;
   align-self: center;
 }
 
-.input-error {
+.error {
   @include font-type('error-label-text');
-}
-
-.input-required-asterisk {
-  @include font-type('primary-input-text');
 }
