configured sass so only need to do import utils instead of whole url

--- a/FrontEnd/src/components/SideBarLayout/SideBarLayout.module.scss
+++ b/FrontEnd/src/components/SideBarLayout/SideBarLayout.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/sass/utils/index';
+@import 'utils';
 
 $sidebar-width: 250px;
 $sidebar-offset: calc(100vw - $sidebar-width);
