--- a/FrontEnd/src/components/ProfileModal/ProfileModal.module.scss
+++ b/FrontEnd/src/components/ProfileModal/ProfileModal.module.scss
@@ -1,14 +1,11 @@
-@import '../../assets/sass/utils/index';
+@import 'utils';
 
 // TODO: abstract common code from this and WizardForm to theme.scss
 $profile-form-middle-height: 90%;
 
 .topBar {
-  @extend .px-3;
-  @extend .py-2;
-
   width: 100%;
-  height: (100% - $wizard-form-middle-height) / 2;
+  height: 5%;
   display: flex;
   border-radius: $lg-border-radius $lg-border-radius 0 0;
   justify-content: center;
@@ -50,9 +47,6 @@ $profile-form-middle-height: 90%;
 }
 
 .middleSection {
-  @extend .my-4;
-  @extend .px-4;
-
   width: 100%;
   height: $profile-form-middle-height;
   @include bp-up('md') {
