--- a/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
+++ b/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
@@ -1,3 +1,5 @@
+@import 'utils';
+
 .unfilled {
   @include font-type('primary-input-text');
   border: 2px solid $primary-3-color;
@@ -24,7 +26,7 @@
 }
 
 .filled {
-  @extend .dropdown-unfilled;
+  @extend .unfilled;
   border-color: $primary-light-color;
 
   &:valid,
@@ -38,7 +40,7 @@
 
 // TODO is this used?
 .dropdown-readonly {
-  @extend .dropdown-filled;
+  @extend .filled;
   background-color: $primary-2-color !important;
 }
 
