--- a/FrontEnd/src/components/basics/Input/Input.module.scss
+++ b/FrontEnd/src/components/basics/Input/Input.module.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/sass/utils/index';
+@import 'utils';
 
 .unfilled {
   @include font-type('primary-input-text');
@@ -30,7 +30,7 @@
 }
 
 .filled {
-  @extend .input-unfilled;
+  @extend .unfilled;
   border-color: $primary-light-color;
 
   &:valid {
