added the @use utils to prepend data of sass-load (in next.config.js). no longer necessary to import

--- a/FrontEnd/src/assets/scss/utils/_mixins.scss
+++ b/FrontEnd/src/assets/scss/utils/_mixins.scss
@@ -1,4 +1,5 @@
 @use 'bootstrap-breakpoints';
+@use 'global-vars' as *;
 
 // Breakpoint wrappers for bootstrap's media breakpoints
 @mixin bp($size) {
