--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -2,7 +2,7 @@
 
 .card {
   @include thin-border('md');
-  background-color: theme-color('secondary-light');
+  background-color: $secondary-1-color;
   border-radius: 25px; // TODO make variable
   overflow: hidden;
 }
