fixed specificity/precedence problem in a few components

--- a/FrontEnd/src/assets/scss/global/_theme.scss
+++ b/FrontEnd/src/assets/scss/global/_theme.scss
@@ -46,7 +46,7 @@ body {
   }
 
   &:hover {
-    @include set-box-shadow($primary-dark-color);
+    @include box-shadow($primary-dark-color);
     background-color: $primary-light-color;
   }
 
