--- a/FrontEnd/src/components/basics/WizardForm/WizardForm.module.scss
+++ b/FrontEnd/src/components/basics/WizardForm/WizardForm.module.scss
@@ -1,44 +1,44 @@
+.root {
+  $wizard-form-middle-height: 90%;
 
-
-$wizard-form-middle-height: 90%;
-
-.topBar {
-  background-color: $primary-2-color;
-  width: 100%;
-  height: (100% - $wizard-form-middle-height) / 2;
-  display: flex;
-  justify-content: space-between;
-  border-radius: $lg-border-radius $lg-border-radius 0 0;
-  align-items: center;
-}
-
-.title {
-  @include font-type('secondary-title');
-  font-weight: $regular-font-weight; // TODO make a font type for this
-}
-
-.middle {
-  width: 100%;
-  height: $wizard-form-middle-height;
-}
-
-.bottomBar {
-  width: 100%;
-  height: (100% - $wizard-form-middle-height) / 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.modalDialog {
-  @include bp-up('md') {
-    max-width: 90%;
-    max-width: 700px;
+  .topBar {
+    background-color: $primary-2-color;
+    width: 100%;
+    height: (100% - $wizard-form-middle-height) / 2;
+    display: flex;
+    justify-content: space-between;
+    border-radius: $lg-border-radius $lg-border-radius 0 0;
+    align-items: center;
   }
-}
 
-.modalContent {
-  padding: 0;
-  border: 0;
-  border-radius: $lg-border-radius;
+  .title {
+    @include font-type('secondary-title');
+    font-weight: $regular-font-weight; // TODO make a font type for this
+  }
+
+  .middle {
+    width: 100%;
+    height: $wizard-form-middle-height;
+  }
+
+  .bottomBar {
+    width: 100%;
+    height: (100% - $wizard-form-middle-height) / 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .modalDialog {
+    @include bp-up('md') {
+      max-width: 90%;
+      max-width: 700px;
+    }
+  }
+
+  .modalContent {
+    padding: 0;
+    border: 0;
+    border-radius: $lg-border-radius;
+  }
 }
