--- a/FrontEnd/src/components/basics/Toggle/Toggle.module.scss
+++ b/FrontEnd/src/components/basics/Toggle/Toggle.module.scss
@@ -1,49 +1,49 @@
-.toggle {
-  @include font-type('primary-input-text');
-  margin: 15px 10px;
-  border: 3px $primary-5-color solid;
-  border-radius: $sm-border-radius;
-  word-break: keep-all;
+.root {
+  .toggle {
+    @include font-type('primary-input-text');
+    margin: 15px 10px;
+    border: 3px $primary-5-color solid;
+    border-radius: $sm-border-radius;
+    word-break: keep-all;
 
-  &:hover, &:focus {
-    @include set-box-shadow($primary-input-color);
-  }
-}
-
-.unselected {
-  &, &:hover, &:focus {
-    @extend .toggle;
-    border-color: $primary-5-color;
-    background-color: white;
-    color: $primary-5-color;
+    &:hover, &:focus {
+      @include box-shadow($primary-input-color);
+    }
   }
 
-  & svg {
-    fill: $primary-5-color;
-    stroke: none;
+  .unselected {
+    &, &:hover, &:focus {
+      border-color: $primary-5-color;
+      background-color: white;
+      color: $primary-5-color;
+    }
+
+    svg {
+      fill: $primary-5-color;
+      stroke: none;
+    }
+
+    @include mousedown {
+      @extend .selected;
+      @include box-shadow($primary-input-color);
+    }
   }
 
-  @include mousedown {
-    @extend .selected;
-    @include set-box-shadow($primary-input-color);
-  }
-}
+  .selected {
+    &, &:hover, &:focus {
+      border-color: $primary-input-color;
+      background-color: $primary-input-color;
+      color: white;
+    }
 
-.selected {
-  &, &:hover, &:focus {
-    @extend .toggle;
-    border-color: $primary-input-color;
-    background-color: $primary-input-color;
-    color: white;
-  }
+    svg {
+      fill: white;
+      stroke: none;
+    }
 
-  & svg {
-    fill: white;
-    stroke: none;
-  }
-
-  @include mousedown {
-    @extend .unselected;
-    @include set-box-shadow($primary-input-color);
+    @include mousedown {
+      @extend .unselected;
+      @include box-shadow($primary-input-color);
+    }
   }
 }
