--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -1,21 +1,69 @@
 
 
 .card {
-  @include thin-border('md');
-  background-color: $secondary-1-color;
-  border-radius: 25px; // TODO make variable
+  /*@include thin-border('md');*/
+  background-color: #FFFFFF;/*$secondary-1-color;*/
+  border-radius: 8px; // TODO make variable
   overflow: hidden;
   height: 270px; //temporary, might remove later
+  box-shadow: 6px;
+  border-style: 1px;
 }
 
 .pic {
   height: 270px;
   overflow: hidden;
   //min-width: 100%;
-  min-height: 100%;
+  //min-height: 100%;
+  padding: 0;
+  
 }
 
 .divider {
   color: rgba(77, 94, 59, 0.2);
   font-weight: bold;
+}
+
+.secondCol{
+  padding: 0;
+  margin: 0;
+}
+
+.price{
+  margin-bottom: 24px;
+  margin-left: 8px;
+  color: #A64919;
+  font-size: 20px;
+}
+
+.day{
+  margin-bottom: 24px;
+  margin-left: 8px;
+  color:#AAAAAA;
+  font-size: 12px
+}
+
+.distance {
+  margin-bottom: 8px;
+  margin-left: 8px;
+  font-size: 13px
+}
+
+.address{
+  margin-bottom: 40px;
+  margin-left: 8px;
+  font-size: 13px
+}
+
+.room{
+  margin-bottom: 8px;
+  margin-left: 18px;
+  font-size: 13px;
+  color: #797979
+}
+
+.date{
+  font-size: 13px;
+  margin-left: 18px;
+  color: #797979
 }
