--- a/FrontEnd/src/assets/scss/utils/_global-vars.scss
+++ b/FrontEnd/src/assets/scss/utils/_global-vars.scss
@@ -79,30 +79,29 @@ $bold-font-weight: 700;
 $regular-font-weight: 400;
 
 // Font sizes
-// TODO change to rem
-$xl-font-size: 30px;
-$lg-font-size: 24px;
-$md-font-size: 20px;
-$sm-font-size: 16px;
-$xs-font-size: 12px;
+$xl-font-size: 1.875rem; // 30px
+$lg-font-size: 1.5rem; // 24px
+$md-font-size: 1.25rem; // 20px
+$sm-font-size: 1rem; // 16px
+$xs-font-size: 0.75rem; // 12px
 
 /**
  * STYLE GUIDE OTHER VARS.
  */
-$lg-border-radius: 22px;
-$sm-border-radius: 10px;
-$input-border-radius: 8px;
+$lg-border-radius: 1.375rem; // 22px
+$sm-border-radius: 0.625rem; // 10px
+$input-border-radius: 0.5rem; // 8px
 
-$lg-modal-height: 600px;
+$lg-modal-height: 37.5rem; // 600px
 
-$default-border-width: 3px;
+$default-border-width: 0.3125rem; // 3px
 
 /**
  * WEBSITE DESIGN VARIABLES.
  */
 $entire-site-margin-x: 8vw;
-$navbar-height: 70px;
-$bookmarks-list-width: 220px;
+$navbar-height: 4.375rem; // 70px
+$bookmarks-list-width: 13.75rem; // 220px
 $filter-height: 5vh;
 $filter-top-margin: 5vh;
 
@@ -122,5 +121,5 @@ $secondary-color: #4d5e3b;
 $main-background-color: #fffcfb;
 $darker-background-color: #f8e6d8;
 
-$rounded-lg: 40px;
+$rounded-lg: 2.5rem; // 40px
 
