--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -3,11 +3,10 @@
 .card {
   /*@include thin-border('md');*/
   background-color: #FFFFFF;/*$secondary-1-color;*/
-  border-radius: 8px; // TODO make variable
+  border-radius: 0.5rem; // TODO make variable
   overflow: hidden;
   height: 270px; //temporary, might remove later
-  box-shadow: 6px;
-  border-style: 1px;
+  box-shadow: 0 6px 10px 0 rgba(black, .14); //elevation 06dp
 }
 
 .pic {
@@ -24,6 +23,13 @@
   font-weight: bold;
 }
 
+.textPortion{
+  margin-left: 8px;
+  font-family: Montserrat;
+  //padding: 0;
+  //margin: 0;
+}
+
 .secondCol{
   padding: 0;
   margin: 0;
@@ -31,39 +37,41 @@
 
 .price{
   margin-bottom: 24px;
-  margin-left: 8px;
   color: #A64919;
   font-size: 20px;
 }
 
 .day{
   margin-bottom: 24px;
-  margin-left: 8px;
   color:#AAAAAA;
   font-size: 12px
 }
 
 .distance {
   margin-bottom: 8px;
-  margin-left: 8px;
+  //margin-left: 8px;
   font-size: 13px
 }
 
 .address{
-  margin-bottom: 40px;
-  margin-left: 8px;
+  margin-bottom: 35px;
+  //display: flex;
+  //flex-direction: row;
   font-size: 13px
+}
+
+.address p{
+  margin:0 0 0 0;
+  padding: 0;
 }
 
 .room{
   margin-bottom: 8px;
-  margin-left: 18px;
   font-size: 13px;
   color: #797979
 }
 
 .date{
   font-size: 13px;
-  margin-left: 18px;
   color: #797979
 }
